# StringAnalyser

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: analyzer_interface.py  analyzers.py  main.py  validation.py
tests/: conftest.py  test_analyzers.py  test_api.py  test_validation.py
